--- a/gui/main.html
+++ b/gui/main.html
@@ -5,6 +5,7 @@
         <title>initial</title>
     </head>
     <body>
-        <h4>this stuff</h4>
+        <main>main</main>
+        <script src="./main.js"></script>
     </body>
 </html>
