--- a/gui/main.html
+++ b/gui/main.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>initial</title>
+        <title>Minerva - Account Manager</title>
+        <link rel="stylesheet" type="text/css" href="./main.css" media="screen">
     </head>
     <body>
-        <main>main</main>
+        <section id="render"></section>
         <script src="./main.js"></script>
     </body>
 </html>
