--- a/resources/main.html
+++ b/resources/main.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Minerva - Account Manager</title>
-        <link rel="stylesheet" type="text/css" href="./main.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./style/main.css" media="screen">
     </head>
     <body>
         <section id="render"></section>
