update to match
updated the html and script to match the new files

--- a/resources/win.main.html
+++ b/resources/win.main.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <section id="render"></section>
-        <script src="./main.js"></script>
+        <script src="./win.main.script.js"></script>
     </body>
 </html>
